--- a/.github/workflows/new-cd.yml
+++ b/.github/workflows/new-cd.yml
@@ -10,7 +10,6 @@ on:
  
 jobs:
   publish-github:
-    # Just to be safe (actually checked in CI already)
     if: ${{ github.ref_type == 'tag' && github.event_name != 'workflow_dispatch' }}
     name: Publish to GitHub
     runs-on: ubuntu-latest
@@ -36,7 +35,7 @@ jobs:
 
   publish-cargo:
     name: Publish to Cargo
-    if: ${{ github.ref_type == 'tag' }} # Just to be safe (actually checked in CI already)
+    if: ${{ github.ref_type == 'tag' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
